# cpp-junkyard

./: .gitignore  .gitmodules  functional.cpp
asio/: CMakeLists.txt  Makefile
asio/src/: Main.cpp
cgiparse/: Cgiparse.hpp  Main.cpp  Makefile  README.md
constructors/: main.cpp
crtp/: Main.cpp  Makefile
customstream/: Makefile
customstream/src/: main.cpp
linAlg/: .clang-format  .vscode-ctags  CMakeLists.txt  Makefile  build.ninja  rules.ninja
linAlg/include/: LinAlg.hpp  lin_alg.hpp  linalg.hpp
linAlg/src/: LinAlg_Matrix_TEST.cpp  LinAlg_TEST.cpp  LinAlg_Vector_TEST.cpp  Main.cpp  Tests.cpp
luasupport/: Main.cpp  Makefile  example.lua
luasupport/lua/include/: lua.hpp
mixin/: CMakeLists.txt  Makefile
mixin/src/: Main.cpp
mixinevents/: DataSignals.hpp  Main.cpp  Makefile  Resource.hpp  ResourceFetcher.cpp  ResourceFetcher.hpp  Signal.hpp  signals.hpp
modules/: README.md  compile.sh
modules/src/: Main.cpp  MyModule.cppm  MyModule.pcm
polymorphism/: CMakeLists.txt  main.cc
sdl/: Animator.hpp  CMakeLists.txt  Main.cpp  Makefile  SDL.hpp  build.ninja  rules.ninja
sdl/include/: Animator.hpp  SDL.hpp  SDL_extra.hpp
sdl/include/SDL2cpp/: ErrorCheck.hpp  Globals.hpp  MemoryContainer.hpp  Renderer.hpp  Surface.hpp  Texture.hpp  Window.hpp
sdl/include/SDLExtra/: Font.hpp
sdl/src/: Main.cpp
sdl/src/SDL2cpp/: Globals.cpp  Renderer.cpp  Surface.cpp  Texture.cpp  Window.cpp
sdl/src/SDLExtra/: Font.cpp
signal/: Main.cpp  Makefile  signals.hpp
simplyFunctional/: Makefile
simplyFunctional/src/: main.cpp
sqlite/: CMakeLists.txt  database_connection.cpp  database_connection.hpp  database_exception.cpp  database_exception.hpp  database_transaction.cpp  database_transaction.hpp  idatabase_query.cpp  idatabase_query.hpp  main.cpp  prepared_statement.cpp  prepared_statement.hpp
sqlite/lib/sqlite3/: CMakeLists.txt
sqlite/src/: main.cpp
sqlite/src/sqlite_connect/: connection.cpp  connection.hpp  iquery.cpp  iquery.hpp  prepared_statement.cpp  prepared_statement.hpp  sqlite_connect.hpp  transaction.cpp  transaction.hpp
static_lib/: CMakeLists.txt  Makefile
static_lib/include/: lib.hpp
static_lib/src/: lib.cpp  main.cpp
strongtypes/: CMakeLists.txt  build.ninja  rules.ninja
strongtypes/src/: Main.cpp
threading/: Main.cpp  Makefile
timer/: CMakeLists.txt  Makefile
timer/src/: main.cpp
traits/: CMakeLists.txt  Makefile  build.ninja  rules.ninja
traits/src/: Main.cpp
