CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

PROJECT(sqlite_buf)

SET(SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/sqlite3.c
    ${CMAKE_CURRENT_SOURCE_DIR}/shell.c
)

ADD_LIBRARY(sqlite3_static STATIC "")
TARGET_SOURCES(sqlite3_static PRIVATE ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(sqlite3_static PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

ADD_LIBRARY(sqlite3_shared SHARED "")
TARGET_SOURCES(sqlite3_shared PRIVATE ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(sqlite3_shared PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})