CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

PROJECT(sqlite3)

SET(LIB_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/sqlite3.c
)

SET(CLI_SOURCES
    ${LIB_SOURCES}
    ${CMAKE_CURRENT_SOURCE_DIR}/shell.c
)

ADD_LIBRARY(sqlite3_static STATIC "")
TARGET_SOURCES(sqlite3_static PRIVATE ${LIB_SOURCES})
TARGET_INCLUDE_DIRECTORIES(sqlite3_static PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

ADD_LIBRARY(sqlite3_shared SHARED "")
TARGET_SOURCES(sqlite3_shared PRIVATE ${LIB_SOURCES})
TARGET_INCLUDE_DIRECTORIES(sqlite3_shared PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

ADD_EXECUTABLE(sqlite3_cli "")
TARGET_SOURCES(sqlite3_cli PRIVATE ${CLI_SOURCES})
TARGET_INCLUDE_DIRECTORIES(sqlite3_cli PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
